# tcc-app-fitness

./: .gitignore  API_EXAMPLES.md  ARCHITECTURE.md  App.tsx  BACKEND_INTEGRATION_GUIDE.md  BACKEND_STRUCTURE.md  ENVIRONMENT_SETUP.md  ESTRUTURA_PROMPT_TEXTUAL.md  IMPLEMENTAR_QUICK_WORKOUT.md  INSTRUCOES_NETWORK.md  LICENSE  README.md  README_ARCHITECTURE.md  README_BACKEND.md  TEMPLATES_PROMPTS_COMPLETOS.txt  WORKOUT_STRUCTURE.md  WORKOUT_USER_ISOLATION.md  package-lock.json  package.json  teste
assets/icons/: README.md
backend-tcc-fitness/: .gitignore  README.md  main.py  pyproject.toml
backend-tcc-fitness/src/core/: config.py  database.py  init_db.py
backend-tcc-fitness/src/routers/: router.py
backend-tcc-fitness/src/routers/apis/dieta/: dieta.py
backend-tcc-fitness/src/routers/apis/gpt/: funcs_gpt.py  gpt.py  gpt_dieta.py
backend-tcc-fitness/src/routers/apis/treino/: listagem.py  treino_usuario.py
backend-tcc-fitness/src/routers/apis/usuario/: cadastro.py
backend-tcc-fitness/src/routers/models/: anamnesemodel.py  consultas.py  query_db.py  usuario_model.py
diagramas-modelio/: project.conf
diagramas-modelio/.runtime/: .save  projectInfo.html
diagrams/: README.md
diagrams/4+1/: 12_4+1_Vista_Logica.puml  13_4+1_Vista_Processo.puml  14_4+1_Vista_Desenvolvimento.puml  15_4+1_Vista_Fisica.puml  16_4+1_Vista_Cenarios.puml
diagrams/ICONIX/: 01_Modelo_Dominio.puml  02_Casos_Uso.puml  03_Robustez_UC03_GerarTreino.puml  04_Robustez_UC08_GerarDieta.puml  05_Robustez_UC01_Login.puml  (+4 more)
tcc-fitness/: App.tsx  app.json  package-lock.json  package.json
(+165 files in other folders)
